# WikiSurfing

./: .gitignore  README.md  docker-compose.example.yaml  openapi.json
.cursor/rules/: web-rule.mdc
core/: pyproject.toml
core/src/tequila/: api.py  article.py  dependencies.py  parse_links.py  pipeline.py  test_api.py  test_pagerank.py  utils.py
core/src/tequila/storage/: docs.py  space.py
web/: nuxt.config.ts  openapi-ts.config.ts  package.json  pnpm-lock.yaml  vercel.json
web/app/: app.vue
web/app/assets/css/: main.css
web/app/components/: AppFooter.vue  AppHeader.vue  ArticleRenderer.vue
web/app/lib/: real_client.ts  streaming.ts
web/app/lib/api/: sdk.gen.ts  types.gen.ts
web/app/pages/: index.vue  random.vue
web/app/pages/article/: [slug].vue
